--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+lib/
+
 # Logs
 logs
 *.log
@@ -49,6 +51,7 @@ typings/
 
 # Optional npm cache directory
 .npm
+.npmrc
 
 # Optional eslint cache
 .eslintcache
