--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "build": "tsc --build",
-    "eslint": "eslint src/**/*.js src/**/*.ts --fix",
+    "eslint": "eslint src/**/*.ts --fix",
     "postinstall": "npm run build && node ./deploymentScripts/webConfigPrep.js",
     "start": "tsc --build && node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
