--- a/packages/bot/tsconfig.json
+++ b/packages/bot/tsconfig.json
@@ -4,10 +4,10 @@
     "declaration": true,
     "target": "es2016",
     "module": "commonjs",
-    "outDir": "./lib",
-    "rootDir": "./src",
+    "outDir": "lib",
+    "rootDir": "src",
     "sourceMap": true,
     "incremental": true,
-    "tsBuildInfoFile": "./lib/.tsbuildinfo"
+    "tsBuildInfoFile": "lib/.tsbuildinfo"
   }
 }
