--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -15,16 +15,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com"
+    "url": "https://github.com/corinagum/BF-template"
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/restify": "^8.5.1",
     "botbuilder": "^4.13.0",
     "dotenv": "^8.2.0",
-    "math-random": "^2.0.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
+    "replace": "^1.2.1",
     "restify": "^8.5.1"
   },
   "devDependencies": {
