--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -27,12 +27,5 @@
     "replace": "^1.2.1",
     "restify": "^8.5.1"
   },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.24.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
-  }
+  "devDependencies": {}
 }
