Clean up scripts

--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "repository": "git@github.com:corinagum/BF-template.git",
   "author": "Corina <14900841+corinagum@users.noreply.github.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "cd packages/bot && tsc --build || cd packages/token-server && tsc --build",
+    "eslint": "eslint packages/**/src/**/*.ts --fix",
+    "postinstall": "yarn build && node ./packages/bot/deploymentScripts/webConfigPrep.js",
+    "start": "yarn build && concurrently \"node packages/bot/lib/index.js\" \"node packages/token-server/lib/index.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --watch ./src -e ts --exec \"yarn start\""
+  },
+  "dependencies": {
+    "nodemon": "^2.0.7"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "concurrently": "^6.0.2",
     "eslint": "^7.25.0",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.2.1",
