--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -8,10 +8,10 @@
   "scripts": {
     "build": "tsc --build",
     "eslint": "eslint src/**/*.ts --fix",
-    "postinstall": "npm run build && node ./deploymentScripts/webConfigPrep.js",
+    "postinstall": "yarn build && node ./deploymentScripts/webConfigPrep.js",
     "start": "tsc --build && node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --watch ./src -e ts --exec \"npm run start\""
+    "watch": "nodemon --watch ./src -e ts --exec \"yarn start\""
   },
   "repository": {
     "type": "git",
