--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,9 @@
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-unused-vars": [
-      "error",
+      "warn",
       {
+        "vars": "local",
         "args": "after-used",
         "argsIgnorePattern": "^_",
         "caughtErrors": "all",
