--- a/packages/bot-offline/package.json
+++ b/packages/bot-offline/package.json
@@ -6,6 +6,10 @@
   "author": "corinagum",
   "license": "MIT",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/corinagum/BF-template"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
