--- a/packages/bot-offline/src/tsconfig.json
+++ b/packages/bot-offline/src/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "declaration": true,
     "declarationMap": true,
+    "emitDeclarationOnly": true,
     "incremental": true,
     "module": "commonjs",
-    "outDir": "lib",
-    "rootDir": "src",
+    "outDir": "../lib",
     "sourceMap": true,
-    "target": "es2016",
+    "target": "esnext",
     "tsBuildInfoFile": "lib/.tsbuildinfo"
   }
 }
