--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "bf-template-root",
+  "private": true,
   "version": "1.0.0",
   "repository": "git@github.com:corinagum/BF-template.git",
   "author": "Corina <14900841+corinagum@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "build": "cd packages/bot && tsc --build || cd packages/token-server && tsc --build",
+    "build": "cd packages/bot && tsc --build || cd packages/bot-offline && tsc --build || cd packages/commands && tsc --build || cs packages/token-server tsc --build",
     "eslint": "eslint packages/**/src/**/*.ts --fix",
-    "postinstall": "yarn build && node ./packages/bot/deploymentScripts/webConfigPrep.js",
+    "postinstall": "lerna bootstrap --hoist && npm run build && node ./packages/bot/deploymentScripts/webConfigPrep.js",
     "start": "lerna run start --parallel",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --watch ./src -e ts --exec \"yarn start\""
+    "watch": "nodemon --watch ./src -e ts --exec \"npm start\""
   },
   "dependencies": {
     "nodemon": "^2.0.7"
