--- a/packages/bot-offline/package.json
+++ b/packages/bot-offline/package.json
@@ -12,8 +12,10 @@
     "url": "https://github.com/corinagum/BF-template"
   },
   "scripts": {
-    "build": "tsc --build src",
-    "start": "yarn run build -- --watch"
+    "build": "npm run build:babel && npm run build:typescript",
+    "build:babel": "babel --extensions .js,.ts --out-dir lib/ src/",
+    "build:typescript": "tsc --build src",
+    "start": "npm run build -- --watch"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
