--- a/packages/token-server/package.json
+++ b/packages/token-server/package.json
@@ -12,7 +12,7 @@
     "eslint": "eslint src/**/*.ts --fix",
     "start": "tsc --build && node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon --watch ./src -e ts --exec \"yarn start\""
+    "watch": "nodemon --watch ./src -e ts --exec \"npm start\""
   },
   "dependencies": {
     "dotenv": "^8.2.0",
