--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,27 +10,5 @@ updates:
     schedule:
       interval: "weekly"
       day: "monday"
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/packages/token-server"
-    schedule:
-      interval: "weekly"
-      day: "tuesday"
-      time: "09:00"
-  - package-ecosystem: "npm"
-    directory: "/packages/commands"
-    schedule:
-      interval: "weekly"
-      day: "wednesday"
-      time: "09:00"
-  - package-ecosystem: "npm"
-    directory: "/packages/bot"
-    schedule:
-      interval: "weekly"
-      day: "thursday"
-      time: "09:00"
-  - package-ecosystem: "npm"
-    directory: "/packages/bot-offline"
-    schedule:
-      interval: "weekly"
-      day: "thursday"
-      time: "09:00"
+# Updates both the package-lock and package.json, not just package-lock
+versioning-strategy: increase
