--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,12 +3,13 @@
 # Please see the documentation for all configuration options:
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
-version: 2
-updates:
-  - package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
-      day: "monday"
-    # Updates both the package-lock and package.json, not just package-lock
-    versioning-strategy: increase
+# disabling non-security updates
+#version: 2
+#updates:
+#  - package-ecosystem: "npm" # See documentation for possible values
+#    directory: "/" # Location of package manifests
+#    schedule:
+#      interval: "weekly"
+#      day: "monday"
+#    # Updates both the package-lock and package.json, not just package-lock
+#    versioning-strategy: increase
